...
    tools:context=".ViewTasks">

    <include layout="@layout/content_view_tasks" />

    <!-- RecyclerView code from https://www.youtube.com/watch?v=Nw9JF55LDzE (accessed June 7, 2020) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="56dp"
        android:clipToPadding="true"
        android:scrollbars="vertical"/>
    <!-- paddingBottom and clipToPadding snippets from https://material.io/develop/android/components/bottom-app-bars/ -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_bottom_margin"
        android:onClick="openNewTaskDialog"
...
