...
            android:layout_below="@+id/textViewTaskDueDate"
            android:padding="4dp"
            android:text="@string/assignee" />

        <!-- code from https://stackoverflow.com/questions/31765395/whats-the-name-of-the-little-widget-with-three-dots-inside-a-cardview-in-androi (accessed June 25, 2020) -->
        <ImageButton
            android:id="@+id/taskOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/actionOverflowButtonStyle"
            android:layout_alignParentRight="true"/>

        <ImageView
            android:id="@+id/checkmark"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/textViewTaskDueDate"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/heavy_check_mark" />
...
