<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TradeTasks">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mainNav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_nav_items" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTradeRequests"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:clipToPadding="true"
        android:paddingTop="30dp"
        android:paddingBottom="56dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMyTradeRequests" />

    <TextView
        android:id="@+id/textViewMyTradeRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myTradeRequests"
        android:textStyle="bold"
        android:textSize="24sp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewTradeRequests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>